# hed-examples

./: .codespellrc  .gitattributes  .gitignore  .lycheeignore  .typos.toml  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  lychee.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  temp.mediawiki
.github/: copilot-instructions.md
.github/workflows/: codespell.yml  links.yaml  links.yml  typos.yaml  validate_examples.yml
datasets/: README.md  package-lock.json
datasets/eeg_ds002893s/: dataset_description.json  participants.tsv
datasets/eeg_ds002893s_deprecated/: CHANGES  README  participants.json  participants.tsv
datasets/eeg_ds002893s_hed/: README  dataset_description.json  participants.json  participants.tsv  task-AuditoryVisualShift_events.json
datasets/eeg_ds002893s_hed_attention_shift/: README  README.md  dataset_description.json  participants.json  participants.tsv  task-AuditoryVisualShift_events.json
datasets/eeg_ds003645s_hed/: README.md  dataset_description.json
datasets/eeg_ds003645s_hed_column/: dataset_description.json  participants.json  participants.tsv  task-FacePerception_events.json
datasets/eeg_ds003645s_hed_curly/: dataset_description.json  task-FacePerception_events.json
datasets/eeg_ds003645s_hed_demo/: README  README.md  participants.json  participants.tsv  task-FacePerception_events.json
datasets/eeg_ds003645s_hed_library/: README.md  dataset_description.json  task-FacePerception_events.json
datasets/eeg_ds003645s_hed_partnered/: README.md  dataset_description.json  task-FacePerception_events.json
datasets/eeg_ds003645s_hed_remodel/: README.md  dataset_description.json  task-FacePerception_events.json
datasets/eeg_ds003645s_hed_tsv/: README  participants.tsv  task-FacePerception_events.json
datasets/eeg_ds003654s/: task-FacePerception_events.json
datasets/eeg_ds003654s_inheritance/: dataset_description.json  task-FacePerception_events.json
datasets/eeg_ds003654s_lib/: task-FacePerception_events.json
datasets/eeg_ds003654s_library/: dataset_description.json
datasets/eeg_ds004105s_hed/: .bidsignore  CHANGES  README  README.md  dataset_description.json  participants.json  participants.tsv  task-DriveRandomSound_eeg.json  task-DriveRandomSound_events.json
datasets/eeg_ds004106s_hed/: .bids-validator-config.json  CHANGES  README  README.md  dataset_description.json  participants.json  participants.tsv  task-GuardDuty_eeg.json  task-GuardDuty_events.json
datasets/eeg_ds004117s_hed_sternberg/: README  (+5 more)
docs/: 01_Overview.md  AnnotationQuickStart.md  BasicHEDAnnotation.md  conf.py  index.rst  requirements.txt
hedcode/: README.md  __init__.py  _version.py  requirements.txt  setup.py
src/: LICENSE  README.md
(+969 files in other folders)
