[metadata]
name = hed-examples
author = VisLab, Ian Callanan, Kay Robbins
author_email = Kay.Robbins@utsa.edu
description = "Examples using HED tools and services.",
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hed-standard/hed-examples/
# project_urls =
bug tracker = https://github.com/hed-standard/hed-examples/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.9
install_requires =
    click
    coverage
    defusedxml
    et-xmlfile
    Flask
    Flask-WTF
    inflect
    itsdangerous
    jdcal
    Jinja2
    MarkupSafe
    numpy
    openpyxl
    pandas
    portalocker
    python-dateutil
    pytz
    semantic-version
    six
    Sphinx
    SphinxExtensions
    sphinx_rtd_theme
    Werkzeug
    xlrd
    attrs


[options.packages.find]
include = hed*

[versioneer]
VCS = git
style = pep440
versionfile_source = src/_version.py
versionfile_build = src/_version.py
tag_prefix =
parentdir_prefix = src-

[codespell]
skip = '*.git,*.pdf,*.xml,*.mediawiki,*.svg,versioneer.py,venv*,*.tsv,*.yaml,*.yml,*.json,*.rdf,*.jsonld,datasets*,'
ignore-words-list = 'te,parms'
